log/build_2023-03-22_16-07-36/battery_node/stderr.log
  File "/home/yueju/led/install/battery_node/lib/python3.10/site-packages/battery_node/node_battery.py", line 15
    request=SetLed. 
                    ^
SyntaxError: invalid syntax

